Readds RSL366 protocol because the switches use different numbering scheme to address devices than arctech_switch_old

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,11 +271,15 @@ if(${PROTOCOL_COGEX_SWITCH} MATCHES "OFF"
 	AND ${PROTOCOL_BYEBYESTANDBYE_SWITCH} MATCHES "OFF"
 	AND ${PROTOCOL_DUWI_SWITCH} MATCHES "OFF"
 	AND ${PROTOCOL_PROMAX_SWITCH} MATCHES "OFF"
-	AND ${PROTOCOL_RSL366} MATCHES "OFF"
 	AND ${PROTOCOL_EURODOMEST_SWITCH} MATCHES "OFF"
 	AND ${PROTOCOL_INTERTECHNO_OLD} MATCHES "OFF")
 	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/arctech_switch_old.h")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/arctech_switch_old.c")
+endif()
+
+if(${PROTOCOL_RSL366} MATCHES "OFF")
+	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/rsl366.h")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/rsl366.c")
 endif()
 
 if(${PROTOCOL_KAKU_SCREEN_OLD} MATCHES "OFF")
