Increase max stream length to 512

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -30,6 +30,7 @@
 
 #define VERSION									"5.0"
 #define PULSE_DIV								34
+#define MAXPULSESTREAMLENGTH		512
 #define EPSILON									0.00001
 
 #ifdef WEBSERVER
