Modified quigg_gt7000 switch and switch with dimmer pwotocol & new ID

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -465,9 +465,9 @@ if(${PROTOCOL_POLLIN_SWITCH} MATCHES "OFF")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/pollin.c")
 endif()
 
-if(${PROTOCOL_QUIGG_GT7000} MATCHES "OFF")
-    list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_gt7000.h")
-    list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_gt7000.c")
+if(${PROTOCOL_QUIGG_GT7000_SWITCH} MATCHES "OFF")
+    list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_gt7000_switch.h")
+    list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_gt7000_switch.c")
 endif()
 
 if(${PROTOCOL_MUMBI_SWITCH} MATCHES "OFF")
@@ -553,9 +553,9 @@ if(${PROTOCOL_BEAMISH_SWITCH} MATCHES "OFF")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/beamish_switch.c")
 endif()
 
-if(${PROTOCOL_QUIGG_SCREEN} MATCHES "OFF")
-	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_screen.h")
-	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_screen.c")
+if(${PROTOCOL_QUIGG_GT7000_SCREEN} MATCHES "OFF")
+	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_gt7000_screen.h")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/quigg_gt7000_screen.c")
 endif()
 
 if(${PROTOCOL_NINJABLOCKS_WEATHER} MATCHES "OFF")
