--- a/defines.h.in
+++ b/defines.h.in
@@ -16,13 +16,8 @@
 	along with pilight. If not, see	<http://www.gnu.org/licenses/>
 */
 
-#ifndef _PILIGHT_H_
-#define _PILIGHT_H_
-
-#include "json.h"
-#include "mem.h"
-
-/* Internals */
+#ifndef _DEFINES_H_
+#define _DEFINES_H_
 
 #cmakedefine WEBSERVER
 #cmakedefine EVENTS
@@ -75,21 +70,12 @@
 	#define FIRMWARE_GPIO_MISO	13
 #endif
 
-#include "devices.h"
-
-typedef enum runmode_t {
-	STANDALONE,
-	ADHOC
-} runmode_t;
-
-extern struct pilight_t {
-    void (*broadcast)(char *name, JsonNode *message);
-    int (*send)(JsonNode *json);
-    int (*control)(struct devices_t *dev, char *state, JsonNode *values);
-    void (*receive)(int *rawcode, int rawlen, int plslen, int hwtype);
-    runmode_t runmode;
-} pilight;
-
-char pilight_uuid[UUID_LENGTH];
+#if !defined(PATH_MAX)
+	#if defined(_POSIX_PATH_MAX)
+		#define PATH_MAX _POSIX_PATH_MAX
+	#else
+		#define PATH_MAX 1024
+	#endif
+#endif
 
 #endif
