--- a/defines.h.in
+++ b/defines.h.in
@@ -85,6 +85,8 @@
 	#define FIRMWARE_GPIO_MISO	13
 #endif
 
+#define PILIGHT_V6
+
 #if !defined(PATH_MAX)
 	#if defined(_POSIX_PATH_MAX)
 		#define PATH_MAX _POSIX_PATH_MAX
