Added support for the Arduino Nano

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -988,7 +988,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()	
 
 	if(WIN32)
-		add_executable(pilight-daemon daemon.c admin.obj icon.obj)
+		# add_executable(pilight-daemon daemon.c admin.obj icon.obj)
+		add_executable(pilight-daemon daemon.c icon.obj)
 		target_link_libraries(pilight-daemon "-Wl,--subsystem,windows")
 	else()
 		add_executable(pilight-daemon daemon.c)
@@ -1004,7 +1005,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 
 	if(WIN32)
-		add_executable(pilight-raw raw.c admin.obj icon.obj)
+		# add_executable(pilight-raw raw.c admin.obj icon.obj)
+		add_executable(pilight-raw raw.c icon.obj)
 	else()
 		add_executable(pilight-raw raw.c)
 	endif()
@@ -1064,7 +1066,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 
 	if(WIN32)
-		add_executable(pilight-debug debug.c admin.obj icon.obj)
+		# add_executable(pilight-debug debug.c admin.obj icon.obj)
+		add_executable(pilight-debug debug.c icon.obj)
 	else()
 		add_executable(pilight-debug debug.c)
 	endif()
