Allow flashing of Arduino Nano with pilight-flash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,9 +213,10 @@ include_directories("${PROJECT_SOURCE_DIR}/libs/polarssl/")
 if(WIN32)
 	include_directories("${PROJECT_SOURCE_DIR}/libs/pthreadw32/")
 else()
-	include_directories("${PROJECT_SOURCE_DIR}/libs/avrdude/")
 	include_directories("${PROJECT_SOURCE_DIR}/libs/platform/")
 endif()
+
+include_directories("${PROJECT_SOURCE_DIR}/libs/avrdude/")
 
 file(GLOB protocol_headers
 	"${PROJECT_SOURCE_DIR}/libs/protocols/*.h"
@@ -686,11 +687,17 @@ if(${EVENTS} MATCHES "OFF")
 	list(REMOVE_ITEM config "${PROJECT_SOURCE_DIR}/libs/config/rules.c")
 endif()
 
-if(${FIRMWARE_UPDATER} MATCHES "OFF" OR WIN32)
+if(${FIRMWARE_UPDATER} MATCHES "OFF")
 	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/pilight/firmware.c")
 	list(REMOVE_ITEM pilight ${avrdude_sources})
 	file(GLOB avrdude_headers "${PROJECT_SOURCE_DIR}/libs/avrdude/*.h")
 	list(REMOVE_ITEM pilight ${avrdude_headers})
+endif()
+if(WIN32)
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/avrdude/ser_posix.c")
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/avrdude/avrgpio.c")
+else()
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/avrdude/ser_win32.c")
 endif()
 
 if(NOT WIN32)
@@ -1097,7 +1104,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 
 	if(WIN32)
-		add_executable(pilight-flash flash.c admin.obj icon.obj)
+		# add_executable(pilight-flash flash.c admin.obj icon.obj)
+		add_executable(pilight-flash flash.c icon.obj)
 	else()
 		add_executable(pilight-flash flash.c)
 	endif()
@@ -1111,6 +1119,10 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		target_link_libraries(pilight-flash ${CMAKE_THREAD_LIBS_INIT})
 	endif()
 
+	if(WIN32)
+		install(FILES "${PROJECT_SOURCE_DIR}/pilight_usb_nano.hex" DESTINATION . COMPONENT pilight)
+	endif()
+	
 	if(NOT WIN32)
 		if(EXISTS "/usr/local/sbin/pilight-send")
 			install(CODE "execute_process(COMMAND rm /usr/local/sbin/pilight-send)")
