--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -16,7 +16,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	add_subdirectory(avrdude)
 	set(${PROJECT_NAME}_files ${${PROJECT_NAME}_files} ${avrdude_files} CACHE INTERNAL "")
 
-	if(${ZWAVE})
+	if(${ZWAVE} MATCHES "ON")
 		add_subdirectory(openzwave)	
 		set(${PROJECT_NAME}_files ${${PROJECT_NAME}_files} ${openzwave_files} CACHE INTERNAL "")
 	endif()
