--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(pilight)
 set(VERSION 6.0)
 
 set(MODULESPACK OFF)
+set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_SKIP_RULE_DEPENDENCY TRUE)
 set(CPACK_DEB_COMPONENT_INSTALL TRUE)
