--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -43,6 +43,7 @@
 	#define WEBSERVER_CHUNK_SIZE 	4096
 	#define WEBSERVER_USER 				"www-data"
 	#define WEBGUI_WEBSOCKETS			1
+	#cmakedefine WEBSERVER_SSL			
 #endif
 
 #define MAX_CLIENTS							30
@@ -54,6 +55,7 @@
 	#define PROTOCOL_ROOT						"c:/pilight/protocols/"
 	#define HARDWARE_ROOT						"c:/pilight/hardware/"
 	#define OPERATOR_ROOT						"c:/pilight/operators/"
+	#define FUNCTION_ROOT						"c:/pilight/functions/"	
 	#define ACTION_ROOT							"c:/pilight/actions/"	
 
 	#define CONFIG_FILE							"c:/pilight/config.json"
@@ -63,6 +65,7 @@
 	#define PROTOCOL_ROOT						"/usr/local/lib/pilight/protocols/"
 	#define HARDWARE_ROOT						"/usr/local/lib/pilight/hardware/"
 	#define OPERATOR_ROOT						"/usr/local/lib/pilight/operators/"
+	#define FUNCTION_ROOT						"/usr/local/lib/pilight/functions/"	
 	#define ACTION_ROOT							"/usr/local/lib/pilight/actions/"	
 
 	#define PID_FILE								"/var/run/pilight.pid"
