Added support for event functions
Event function are additions to event operators that allow more
advanced rules. Currently, two functions are support DATE_FORMAT
and RANDOM. Two examples and their output:

IF DATE_FORMAT(datetime, \"%c\") == ...
=
IF "Fri Apr 17 17:31:03 2015" == ...

IF DATE_FORMAT("01-12-2015", %d-%m-%Y, %Y%m%d) == ...
=
IF 20151201 == ...

IF RANDOM(0, 10) == ...
=
IF 6 == ...

IF DATE_FORMAT(datetime, %d) == RANDOM(1, 31) ...
=
IF 17 == 22 ...

Functions can also be nested:

IF RANDOM(RANDOM(0, 10), RANDOM(0, 20)) == ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,6 +264,9 @@ add_subdirectory(libs)
 
 if(NOT WIN32)
 	find_package(Threads REQUIRED)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")	
+		find_package(Backtrace REQUIRED)
+	endif()
 endif()
 
 if(${MODULESPACK} MATCHES "OFF" OR WIN32)
@@ -299,7 +302,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 
 	target_link_libraries(${PROJECT_NAME}_shared m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}_shared execinfo)
+		target_link_libraries(${PROJECT_NAME}_shared ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}_shared rt)
@@ -312,7 +315,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 
 	target_link_libraries(${PROJECT_NAME}_static m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}_static execinfo)
+		target_link_libraries(${PROJECT_NAME}_static ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}_static rt)
@@ -393,7 +396,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_DL_LIBS})
 	target_link_libraries(${PROJECT_NAME}-daemon m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-daemon execinfo)
+		target_link_libraries(${PROJECT_NAME}-daemon ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_THREAD_LIBS_INIT})
@@ -411,7 +414,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-raw ${CMAKE_DL_LIBS})
 	target_link_libraries(${PROJECT_NAME}-raw m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-raw execinfo)
+		target_link_libraries(${PROJECT_NAME}-raw ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-raw ${CMAKE_THREAD_LIBS_INIT})
@@ -429,7 +432,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 	target_link_libraries(${PROJECT_NAME}-send m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-send execinfo)
+		target_link_libraries(${PROJECT_NAME}-send ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-send ${CMAKE_THREAD_LIBS_INIT})
@@ -447,7 +450,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 	target_link_libraries(${PROJECT_NAME}-control m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-control execinfo)
+		target_link_libraries(${PROJECT_NAME}-control ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-control ${CMAKE_THREAD_LIBS_INIT})
@@ -465,7 +468,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-receive ${CMAKE_DL_LIBS})
 	target_link_libraries(${PROJECT_NAME}-receive m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-receive execinfo)
+		target_link_libraries(${PROJECT_NAME}-receive ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-receive ${CMAKE_THREAD_LIBS_INIT})
@@ -483,7 +486,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-debug ${CMAKE_DL_LIBS})
 	target_link_libraries(${PROJECT_NAME}-debug m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-debug execinfo)
+		target_link_libraries(${PROJECT_NAME}-debug ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-debug ${CMAKE_THREAD_LIBS_INIT})
@@ -501,7 +504,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-uuid ${CMAKE_DL_LIBS})
 	target_link_libraries(${PROJECT_NAME}-uuid m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-uuid execinfo)
+		target_link_libraries(${PROJECT_NAME}-uuid ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-uuid ${CMAKE_THREAD_LIBS_INIT})
@@ -519,7 +522,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-flash ${CMAKE_DL_LIBS})
 	target_link_libraries(${PROJECT_NAME}-flash m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-flash execinfo)
+		target_link_libraries(${PROJECT_NAME}-flash ${Backtrace_LIBRARIES})
 	endif()
 	if(NOT WIN32)
 		target_link_libraries(${PROJECT_NAME}-flash ${CMAKE_THREAD_LIBS_INIT})
