Enable arping on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,6 +294,10 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		target_link_libraries(${PROJECT_NAME}_static wsock32)
 		target_link_libraries(${PROJECT_NAME}_static iphlpapi)
 		target_link_libraries(${PROJECT_NAME}_static psapi)
+		if(${PROTOCOL_ARPING} MATCHES "ON")
+			target_link_libraries(${PROJECT_NAME}_shared ${PROJECT_SOURCE_DIR}/res/win32/libwpcap.dll.a)
+			target_link_libraries(${PROJECT_NAME}_static ${PROJECT_SOURCE_DIR}/res/win32/libwpcap.dll.a)
+		endif()
 	endif()
 
 	target_link_libraries(${PROJECT_NAME}_shared m)
@@ -530,6 +534,8 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	if(WIN32)
 		install(FILES "${PROJECT_SOURCE_DIR}/LICENSE.txt" DESTINATION . COMPONENT ${PROJECT_NAME})
 		install(FILES "${PROJECT_SOURCE_DIR}/res/win32/libwinpthread-1.dll" DESTINATION . COMPONENT ${PROJECT_NAME})
+		install(FILES "${PROJECT_SOURCE_DIR}/res/win32/Packet.dll" DESTINATION . COMPONENT ${PROJECT_NAME})
+		install(FILES "${PROJECT_SOURCE_DIR}/res/win32/wpcap.dll" DESTINATION . COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-daemon.exe DESTINATION . COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-raw.exe DESTINATION . COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-send.exe DESTINATION . COMPONENT ${PROJECT_NAME})
@@ -561,6 +567,7 @@ if(WIN32)
 	set(CPACK_NSIS_URL_INFO_ABOUT "http://www.${PROJECT_NAME}.org")
 	set(CPACK_NSIS_CONTACT "info@${PROJECT_NAME}.org")
 	set(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
+	set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL True)
 	set(CPACK_NSIS_MENU_LINKS
 		"${PROJECT_NAME}-daemon" "${PROJECT_NAME}-daemon"
 	)
