--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -78,7 +78,7 @@
 #define RECEIVE_REPEATS					1
 #define UUID_LENGTH							21
 
-#define FIRMWARE_PATH				"c:/Program Data/pilight/"
+#define FIRMWARE_PATH				"c:/pilight/"
 #define FIRMWARE_GPIO_RESET	10
 #define FIRMWARE_GPIO_SCK		14
 #define FIRMWARE_GPIO_MOSI	12
